mediaqueries.css
@media (min-width: 1024px) {
    .about-left, .about-right {
        width: 30%;
    }

    .tool {
        width: 25%; 
    }

    .skillset {
        grid-template-columns: repeat(3, 1fr);
    }
}

@media (max-width: 1023px) and (min-width: 768px) {
    .about-left, .about-right {
        width: 45%;
    }

    .tool {
        width: 40%;
    }

    .skillset {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (max-width: 767px) {
    .about-container {
        flex-direction: column;
        align-items: center;
    }

    .about-left, .about-right {
        width: 100%;
        margin: 1rem 0;
    }

    .social-icons {
        flex-direction: row;
        justify-content: center;
        align-items: center;
    }

    .cv-download {
        width: auto;
        text-align: center;
    }

    .skillset {
        grid-template-columns: 1fr;
    }
}


@media (max-width: 768px) {
    .hamburger {
        display: block;
        cursor: pointer;
    }

    #nav-links ul {
        display: none;
        flex-direction: column;
    }

    #nav-links ul.nav-visible {
        display: flex;
    }

    #nav-links ul li {
        margin: 10px 0;
    }
}

